--- a/LLM/gpt.ipynb
+++ b/LLM/gpt.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# install"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -90,14 +97,23 @@
       "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.18.3)\n",
       "Requirement already satisfied: six>=1.5 in /home/codespace/.local/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->evaluate) (1.17.0)\n",
       "Collecting git+https://github.com/k4black/codebleu.git\n",
-      "  Cloning https://github.com/k4black/codebleu.git to /tmp/pip-req-build-np14_zos\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/k4black/codebleu.git /tmp/pip-req-build-np14_zos\n",
+      "  Cloning https://github.com/k4black/codebleu.git to /tmp/pip-req-build-5htlmg2g\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/k4black/codebleu.git /tmp/pip-req-build-5htlmg2g\n",
       "  Resolved https://github.com/k4black/codebleu.git to commit ddea467ecbd5cbb2a33e318827740195b08e4aa8\n",
       "  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
       "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
       "\u001b[?25hRequirement already satisfied: tree-sitter<0.24.0,>=0.22.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from codebleu==0.7.1) (0.22.3)\n",
-      "Requirement already satisfied: setuptools>=61.0.0 in /home/codespace/.local/lib/python3.12/site-packages (from codebleu==0.7.1) (75.6.0)\n"
+      "Requirement already satisfied: setuptools>=61.0.0 in /home/codespace/.local/lib/python3.12/site-packages (from codebleu==0.7.1) (75.6.0)\n",
+      "Collecting codebleu\n",
+      "  Cloning https://github.com/k4black/codebleu to /tmp/pip-install-h749sbcf/codebleu_0cfb77e81a55478d923499034ce0816b\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/k4black/codebleu /tmp/pip-install-h749sbcf/codebleu_0cfb77e81a55478d923499034ce0816b\n",
+      "  Resolved https://github.com/k4black/codebleu to commit ddea467ecbd5cbb2a33e318827740195b08e4aa8\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: tree-sitter<0.24.0,>=0.22.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from codebleu) (0.22.3)\n",
+      "Requirement already satisfied: setuptools>=61.0.0 in /home/codespace/.local/lib/python3.12/site-packages (from codebleu) (75.6.0)\n"
      ]
     }
    ],
@@ -110,10 +126,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.python/current/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
@@ -136,6 +168,90 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /home/codespace/.local/lib/python3.12/site-packages (2.5.1+cpu)\n",
+      "Requirement already satisfied: filelock in /home/codespace/.local/lib/python3.12/site-packages (from torch) (3.13.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /home/codespace/.local/lib/python3.12/site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: networkx in /home/codespace/.local/lib/python3.12/site-packages (from torch) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in /home/codespace/.local/lib/python3.12/site-packages (from torch) (3.1.4)\n",
+      "Requirement already satisfied: fsspec in /home/codespace/.local/lib/python3.12/site-packages (from torch) (2024.2.0)\n",
+      "Requirement already satisfied: setuptools in /home/codespace/.local/lib/python3.12/site-packages (from torch) (75.6.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in /home/codespace/.local/lib/python3.12/site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/codespace/.local/lib/python3.12/site-packages (from sympy==1.13.1->torch) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/codespace/.local/lib/python3.12/site-packages (from jinja2->torch) (3.0.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': tensor([[ 4299,   751,    62,    77, 17024,     7,    64,    11,   275,  2599,\n",
+      "           198,   220,   220,   220, 37227,  4550,   734,  3146,   526, 15931,\n",
+      "           198,   220,  1441,   257]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}\n",
+      "Logits: tensor([ -8.8760,  -9.3854, -10.0595,  ..., -27.0245, -22.5152,  -8.9662],\n",
+      "       grad_fn=<SliceBackward0>)\n",
+      "Probabilities: tensor([1.3964e-04, 8.3900e-05, 4.2757e-05,  ..., 1.8331e-12, 1.6656e-10,\n",
+      "        1.2758e-04], grad_fn=<SoftmaxBackward0>)\n",
+      "Predicted token ID: 1343\n",
+      "Predicted token:  +\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Prepare model inputs\n",
+    "prompt = \"def add_numbers(a, b):\\n    \\\"\\\"\\\"Add two numbers.\\\"\\\"\\\"\\n  return a\"\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
+    "print(inputs)\n",
+    "# Call the model to get the logits\n",
+    "outputs = model(**inputs)\n",
+    "\n",
+    "# Logits for the last position in the sequence\n",
+    "logits = outputs.logits[0, -1, :]\n",
+    "\n",
+    "# Convert logits to probabilities using softmax\n",
+    "probabilities = torch.softmax(logits, dim=-1)\n",
+    "\n",
+    "# Get the predicted token ID (the one with the highest probability)\n",
+    "predicted_token_id = torch.argmax(probabilities).item()\n",
+    "\n",
+    "# Decode the predicted token ID to text\n",
+    "predicted_token = tokenizer.decode([predicted_token_id])\n",
+    "\n",
+    "print(f\"Logits: {logits}\")\n",
+    "print(f\"Probabilities: {probabilities}\")\n",
+    "print(f\"Predicted token ID: {predicted_token_id}\")\n",
+    "print(f\"Predicted token: {predicted_token}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
@@ -146,15 +262,15 @@
      "text": [
       "tensor([[ 4299,   751,    62,    77, 17024,     7,    64,    11,   275,  2599,\n",
       "           198,   220,   220,   220, 37227,  4550,   734,  3146,   526, 15931,\n",
-      "           198,   220,   220,   220,  1441,   257,  1343,   275,   198,   198,\n",
-      "          4299,   751,    62,    77, 17024,     7,    64,    11,   275,  2599,\n",
-      "           198,   220,   220,   220, 37227,  4550,   734,  3146]])\n",
+      "           198,   220,  1441,   257,  1343,   275,   198,   198,  4299,   751,\n",
+      "            62,    77, 17024,     7,    64,    11,   275,  2599,   198,   220,\n",
+      "         37227,  4550,   734,  3146]])\n",
       "def add_numbers(a, b):\n",
       "    \"\"\"Add two numbers.\"\"\"\n",
-      "    return a + b\n",
+      "  return a + b\n",
       "\n",
       "def add_numbers(a, b):\n",
-      "    \"\"\"Add two numbers\n"
+      "  \"\"\"Add two numbers\n"
      ]
     }
    ],
